# decompose-vector

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  WARP.md  decompose-vector.py  exceptions.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
samples/: Hexagon_box.dxf
tests/: conftest.py  test_dxf_processing.py  test_svg_processing.py  test_utils.py
